--- a/svg.html
+++ b/svg.html
@@ -6,10 +6,13 @@
 
   <body>
 
-    <svg id="vimage" height="500" width="500" style="border: 1px solid">
-      <circle cx="250" cy="250" r="75" fill="yellow" stroke="black"/>
-      <rect x="100" y="100" width="300" height="75" fill="blue"/>
+    <svg id="vimage" height="500" width="500" style="border: 10px solid">
     </svg>
+
+    <br>
+
+    <button id="button">Clear
+    </button>
 
   </body>
 
